--- a/telesale.html
+++ b/telesale.html
@@ -84,7 +84,7 @@
 <body>
 
 <header>
-  Telesale Performance — <span id="branchLabel"></span>
+  Telesale Performance Dashboard 
 </header>
 
 <div class="container">
