--- a/telesale.html
+++ b/telesale.html
@@ -127,7 +127,15 @@
 <script src="config.js"></script>
 
 <script>
-const API_URL = window.API_CONFIG.API_URL + "telesales-reports";
+function getLocationParam() {
+  const params = new URLSearchParams(window.location.search);
+  const location = params.get("location");
+  return location ? `?locationCode=${location}` : "";
+}
+
+const API_URL =
+  window.API_CONFIG.API_URL + "telesales-reports" + getLocationParam();
+
 const API_TOKEN = window.API_CONFIG.API_TOKEN;
 const REFRESH_INTERVAL = 30000;
 
