--- a/telesale.html
+++ b/telesale.html
@@ -204,7 +204,7 @@ async function loadData() {
 
     if (filtered.length === 0) {
       tbody.innerHTML =
-        `<tr><td colspan="5">No sales ≥ 1%</td></tr>`;
+        `<tr><td colspan="5">No sales Data Available</td></tr>`;
       return;
     }
 
